Bug 127262 - Cell range selection in data validity function doesn't work any more
Summary: Cell range selection in data validity function doesn't work any more
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.1.1 rc
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2019-09-01 10:46 UTC by andis.lazdins
Modified: 2019-10-03 09:08 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2019-09-01 10:46:38 UTC
Description:
Cell range selection in validity function doesn't work any more, manual entering of cell range also results in wrong range in case of selection cell range in other sheet.

Steps to Reproduce:
1. Open or create calc file.
2. select function data > validity
3. under allow select Cell range
4. in Source push button to select cell range
5. alternatively write address to cell range in other sheet

Actual Results:
Nothing happens when button (5) is pushed.
Cell range can be entered manually (6); however on reopen validity dialogue wrong address or error address appears.

Expected Results:
Opens additional window for selection cell range (on 5).
Entered cell range remains in the source window (n 6).


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 andis.lazdins 2019-09-01 10:47:56 UTC
It affects 6.3.1.2
Comment 2 m_a_riosv 2019-09-01 11:27:20 UTC
I can't repro

Version: 6.3.1.2 (x64)
Build ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 01837a85004a6f891a09c0a63ed7eff75d634827
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-09-01_00:07:05
Locale: es-ES (es_ES); UI-Language: en-US Calc: CL

Please try Menu/Help/Restart in Safe Mode
Comment 3 Oliver Brinzing 2019-09-01 11:45:07 UTC
(In reply to andis.lazdins from comment #0)
> Actual Results:
> Nothing happens when button (5) is pushed.

no repro with:

Version: 6.3.1.2 (x64)
Build-ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU-Threads: 4; BS: Windows 10.0; UI-Render: Standard; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: 

Please copy information from Menu "Help/About LibreOffice"
Comment 4 andis.lazdins 2019-09-01 11:52:16 UTC
Version: 6.3.1.2
Build ID: b79626edf0065ac373bd1df5c28bd630b4424273
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: lv-LV (en_GB.UTF-8); UI-Language: en-US
Comment 5 Julien Nabet 2019-09-01 18:23:21 UTC
On pc Debian x86-64 with master sources updated today + gtk3 rendering, I don't reproduce this.
Comment 6 raal 2019-09-01 22:06:39 UTC
I can confirm with Version: 6.4.0.0.alpha0+
Build ID: 2bed8af91fc2654b9ed2432f969d32d5741a529b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Shrink button doesn't work. Leaving unconfirmed, because my build is older then Julien's
Comment 7 andis.lazdins 2019-09-20 06:28:09 UTC
In my case this problem still appears in the Version: 6.3.2.2
Build ID: 98b30e735bda24bc04ab42594c85f7fd8be07b9c
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: lv-LV (en_GB.UTF-8); UI-Language: en-US
Calc: threaded
Comment 8 Julien Nabet 2019-09-24 19:58:16 UTC
Andis: I gave a new try with LO Debian package 6.3.2.1 and gtk3, I don't reproduce this.

Could you give a try to https://wiki.documentfoundation.org/QA/FirstSteps ?
Also, could you launch LO from console and see if there are any error/warning messages?
Comment 9 andis.lazdins 2019-09-25 05:05:05 UTC
(In reply to Julien Nabet from comment #8)
> 
> Could you give a try to https://wiki.documentfoundation.org/QA/FirstSteps ?
> Also, could you launch LO from console and see if there are any
> error/warning messages?

Hi!

I tried with new profile with the same result. I have the same result either with 6.3.x and 6.4.x.
I couldn't locate option 'Use OpenGL for all rendering'. I guess it is not used in my case. There are also no such file /cache/opengl_device.log in new as well as in old profile.
'Allow use of OpenCL' option is unchecked and I can't activate it. There are also no files /cache/opencl_devices.log and opencl_profile.xml in the installation or profile folder.

Similar error appeared some time ago in chart component and it was related to gtk. I guess it was this one https://bugs.documentfoundation.org/show_bug.cgi?id=123013 however in that case it was not possible to enter values at all.

As you can see from comments this problem affects not only my PC.
Comment 10 Xisco Faulí 2019-09-25 15:01:43 UTC
I can reproduce it in

Version: 6.4.0.0.alpha0+
Build ID: cc65651a0490383f1a833bb6215d8ec4272d8b5d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

it seems it only affects gtk3
Comment 11 Xisco Faulí 2019-09-25 15:07:33 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8f29d128c52a4f58116fe5474222a929937d0050

author	Caolán McNamara <caolanm@redhat.com>	2019-05-05 20:53:30 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-05-06 11:30:54 +0200
commit 8f29d128c52a4f58116fe5474222a929937d0050 (patch)
tree 39a55627dfcb419365084ea6c1e24059f23f568e
parent 1ea27111034c5581a356b90b93f3741ca17f311e (diff)
do focus in after all other focus handlers are run

Bisected with: bibisect-linux64-6.3 

Adding Cc: to Caolán McNamara
Comment 12 Julien Nabet 2019-09-26 08:34:46 UTC
It doesn't affect me so can't help here -> uncc myself
Comment 13 Caolán McNamara 2019-09-26 12:05:19 UTC
by making focus in async but leaving focus out sync it was entirely predictable that out would appear before in :-(
Comment 14 Commit Notification 2019-09-26 18:51:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ebd37bcc22d0c70cc1e4fdd8e4f3d2f8fc256cd8

Resolves: tdf#127262 validity out of order focus in and out problem

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Caolán McNamara 2019-09-26 18:52:58 UTC
fixed in master, backport to 6-3 in gerrit
Comment 16 Xisco Faulí 2019-10-01 11:36:45 UTC
Verfied in

Version: 6.4.0.0.alpha0+
Build ID: 981654f6e0d57c2c6dd1bbf740a6b67941146497
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue. However, bug 127904 was found while verifying it, thus, holding the backport until bug 127904 is fixed
Comment 17 Commit Notification 2019-10-03 09:08:20 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/af0c51990e6d0f578f75b72383ce129f52bea859

Resolves: tdf#127262 validity out of order focus in and out problem

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.