Resolves: tdf#127262 validity out of order focus in and out problem

Change-Id: I06f5fd0ce32a9f2d799f6003b7d22b13e865b8c6